# tsp-solver

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bash.exe.stackdump  bencineras_cache.json
.claude/: settings.local.json
.github/workflows/: build.yml  test.yml
src/: handlers.rs  main.rs  notes.txt  tour.rs  visualization.rs
static/: index.html  manifest.json
