[package]
name = "tsp-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand        = "0.8.5"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
axum        = "0.7"
tower-http  = { version = "0.5", features = ["cors"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
flate2      = "1"